--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
 <main>
   <div class="container py-3">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-4">Simple header</span>
+      <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <span class="fs-1"><i class="bi bi-moon"></i></span>
       </a>
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Publications</a></li>
+        <li class="nav-item"><a href="publications.html" class="nav-link">Publications</a></li>
         <li class="nav-item"><a href="talks.html" class="nav-link">Presentations & Talks</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Teaching</a></li>
+        <li class="nav-item"><a href="teaching.html" class="nav-link">Teaching</a></li>
       </ul>
     </header>
 
@@ -42,27 +41,27 @@
             <h1 class="display-5 fw-bold">Batuhan Bayir</h1>
             <p class="fs-4">
               I am a second-year graduate student in the 
-              <a href="https://www.math.utah.edu/">Department of Mathematics</a> at the 
-              <a href="https://www.utah.edu/">University of Utah</a>. Before coming to Utah, 
+              <a href="https://www.math.utah.edu/" target="_blank">Department of Mathematics</a> at the 
+              <a href="https://www.utah.edu/" target="_blank">University of Utah</a>. Before coming to Utah, 
               I obtained my master's degree in mathematics from 
-              <a href="https://www.ozyegin.edu.tr/en">Ozyegin University</a> and my 
+              <a href="https://www.ozyegin.edu.tr/en" target="_blank">Ozyegin University</a> and my 
               bachelor's degree in physics from 
-              <a href="https://www.ankara.edu.tr/">Ankara University</a>.
-              I am interested in partial differential equations and currently I study nonlinear Fokker-Planck type systems arising from <a href="https://physics.aps.org/articles/v4/33">grain growth</a> modeling of the polycrystalline materials. For get more idea, please check out our <a href="https://arxiv.org/abs/2502.13151">recent work</a>.
+              <a href="https://www.ankara.edu.tr/" target="_blank">Ankara University</a>.
+              I am interested in partial differential equations and currently I study nonlinear Fokker-Planck type systems arising from <a href="https://physics.aps.org/articles/v4/33" target="_blank">grain growth</a> modeling of the polycrystalline materials. For get more idea, please check out our <a href="https://arxiv.org/abs/2502.13151" target="_blank">recent work</a>.
             </p>
             <p class="fs-4">
               My advisors are 
-              <a href="https://www.math.utah.edu/~epshteyn/">Yekaterina Epshteyn</a> 
-              and <a href="https://www.math.utah.edu/~feldman/">William M Feldman</a>.
+              <a href="https://www.math.utah.edu/~epshteyn/" target="_blank">Yekaterina Epshteyn</a> 
+              and <a href="https://www.math.utah.edu/~feldman/" target="_blank">William M Feldman</a>.
             </p>
-            <p class="fs-4">You can look at my <a href="https://batuhan-bayir.github.io/cv.pdf">CV</a>.</p>
+            <p class="fs-4">You can look at my <a href="cv.pdf" target="_blank">CV</a>.</p>
             
             <!-- Contact details -->
             <h3 class="fw-bold">Contact</h3>
             <p class="fs-4"><i class="bi bi-envelope"></i> bayir at math dot utah dot edu</p>
-            <p class="fs-4"><strong><i class="bi bi-buildings bi-2x"></i></strong> JWB 121-J (<a href="https://map.utah.edu/?buildingnumber=9">map</a>)</p>
+            <p class="fs-4"><strong><i class="bi bi-buildings bi-2x"></i></strong> JWB 121-J (<a href="https://map.utah.edu/?buildingnumber=9" target="_blank">map</a>)</p>
             <a href="https://arxiv.org/a/bayir_b_1.html" style="color: #b31b1b;"><i class="ai ai-arxiv ai-3x"></i></a>
-            <a href="#"><i class="ai ai-google-scholar ai-3x" style="color: #4086f4;"></i></a>
+            <a href="https://scholar.google.com/scholar_lookup?arxiv_id=2502.13151"><i class="ai ai-google-scholar ai-3x" style="color: #4086f4;"></i></a>
             <a href="https://orcid.org/0009-0003-5294-189X" style="color: #a5cd39;"><i class="ai ai-orcid ai-3x"></i></a>
           </div>
     
