--- a/publications.html
+++ b/publications.html
@@ -20,12 +20,13 @@
     
 <main>
   <div class="container py-3">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <header class="d-flex flex-column flex-md-row align-items-center justify-content-center py-3 mb-4 border-bottom">
       <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-1">Batuhan Bayir</span>
       </a>
 
-      <ul class="nav nav-pills">
+      <!-- Navbar -->
+      <ul class="nav nav-pills justify-content-center">
         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="publications.html" class="nav-link active" aria-current="page">Publications</a></li>
         <li class="nav-item"><a href="talks.html" class="nav-link">Presentations & Talks</a></li>
