--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container py-3">
         <header class="d-flex flex-column flex-md-row align-items-center justify-content-center py-3 mb-4 border-bottom">
           <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <span class="fs-1"><i class="bi bi-moon"></i></span>
+            <span class="fs-1">Batuhan Bayir</span>
           </a>
 
           <!-- Navbar -->
@@ -30,8 +30,8 @@
           </ul>
         </header>
 
-        <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-          <div class="container-fluid py-5">
+        <div class="p-4 p-md-3 mb-4 bg-body-tertiary rounded-3"> <!-- Reduced padding -->
+          <div class="container-fluid py-4 py-md-3"> <!-- Reduced padding -->
             <div class="row">
               <!-- Text content on the left -->
               <div class="col-md-8 order-md-1 order-2">
@@ -57,9 +57,9 @@
                 <h3 class="fw-bold">Contact</h3>
                 <p class="fs-4"><i class="bi bi-envelope"></i> bayir at math dot utah dot edu</p>
                 <p class="fs-4"><strong><i class="bi bi-buildings bi-2x"></i></strong> JWB 121-J (<a href="https://map.utah.edu/?buildingnumber=9" target="_blank">map</a>)</p>
-                <a href="https://arxiv.org/a/bayir_b_1.html" style="color: #b31b1b;"><i class="ai ai-arxiv ai-3x"></i></a>
-                <a href="https://scholar.google.com/scholar_lookup?arxiv_id=2502.13151"><i class="ai ai-google-scholar ai-3x" style="color: #4086f4;"></i></a>
-                <a href="https://orcid.org/0009-0003-5294-189X" style="color: #a5cd39;"><i class="ai ai-orcid ai-3x"></i></a>
+                <a href="https://arxiv.org/a/bayir_b_1.html" target="_blank"><i class="ai ai-arxiv ai-3x" style="color: #b31b1b;"></i></a>
+                <a href="https://scholar.google.com/scholar_lookup?arxiv_id=2502.13151" target="_blank"><i class="ai ai-google-scholar ai-3x" style="color: #4086f4;"></i></a>
+                <a href="https://orcid.org/0009-0003-5294-189X" target="_blank"><i class="ai ai-orcid ai-3x" style="color: #a5cd39;"></i></a>
               </div>
         
               <!-- Photo on the right -->
@@ -70,11 +70,12 @@
           </div>
         </div>
 
+        <!----->
         <div class="row align-items-md-stretch">
           <div class="col-md-6 mb-3">
             <div class="h-100 p-5 text-bg-dark rounded-3">
               <h2>Publications</h2>
-              <p>Test content</p>
+              <p>Test contents</p>
               <button class="btn btn-outline-light" type="button">Example button</button>
             </div>
           </div>
