--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container py-3">
         <header class="d-flex flex-column flex-md-row align-items-center justify-content-center py-3 mb-4 border-bottom">
           <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <span class="fs-1">Batuhan Bayir</span>
+            <span class="fs-1"><i class="bi bi-moon"></i></span>
           </a>
 
           <!-- Navbar -->
