--- a/index.html
+++ b/index.html
@@ -74,16 +74,14 @@
         <div class="row align-items-md-stretch">
           <div class="col-md-6 mb-3">
             <div class="h-100 p-5 text-bg-dark rounded-3">
-              <h2>Publications</h2>
-              <p>Test contents</p>
-              <button class="btn btn-outline-light" type="button">Example button</button>
+              <a href="publications.html" class="btn btn-outline-light fs-4">Publications</a>
+              <p>You can check out my publications.</p>
             </div>
           </div>
           <div class="col-md-6 mb-3">
             <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-              <h2>Presentations & Talks</h2>
-              <p>You can watch some of my talks and look at my poster presentations.</p>
-              <button class="btn btn-outline-secondary" type="button">Example button</button>
+              <a href="publications.html" class="btn btn-outline-dark fs-4">Presentations & Talks</a>
+              <p>You can watch some of my expository talks and look at my poster presentations.</p>
             </div>
           </div>
         </div>
