--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="col-md-6 mb-3">
             <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-              <a href="publications.html" class="btn btn-outline-dark fs-4">Presentations & Talks</a>
+              <a href="talks.html" class="btn btn-outline-dark fs-4">Presentations & Talks</a>
               <p>You can watch some of my expository talks and look at my poster presentations.</p>
             </div>
           </div>
