--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="batuhan bayir, batuhan bayir math, batuhan bayir utah">
+    <meta name="description" content="Batuhan Bayir is a graduate student in Mathematics at the University of Utah. He is interested in partial differential equations.">
     <title>Batuhan Bayir</title>
 
     <!-- CSS Files -->
