--- a/talks.html
+++ b/talks.html
@@ -65,7 +65,7 @@
                   <h5 class="card-title">A Fourier Spectral Method for the Rosenau Equation</h5>
                   <p class="card-text">Given at <a href="https://www.uni-ulm.de/mawi/iaa/forschung/horizons-in-non-linear-pdes-summer-school-2022/" target="_blank">Horizons in non-linear PDEs Summer School</a>, 26-30 September 2022, Ulm University, Germany.</p>
                   <img src="rosenau-poster.svg" class="img-fluid" alt="Rosenau">
-                  <a class="btn btn-outline-dark mt-3" href="rosenau_poster.pdf" role="button">Look at the poster</a>
+                  <a class="btn btn-outline-dark mt-3" href="rosenau_poster.pdf" target="_blank" role="button">Look at the poster</a>
                 </div>
               </div>
             </div>
