--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
                       <p>February 2025</p>
                       <p class="card-text"> Authors: Batuhan Bayir, <a href="https://www.math.utah.edu/~epshteyn/" target="_blank">Yekaterina Epshteyn</a>, and <a href="https://www.math.utah.edu/~feldman/" target="_blank">William M Feldman</a></p>
                       <div class="text-center"><img src="grain-boundary.png" class="img-fluid" style="padding: 10px;" width="400" height="350" alt="Grain boundary"></div>
-                      <a class="btn btn-outline-dark" href="https://arxiv.org/abs/2502.13151" target="_blank" role="button">Read on arXiv.</a>
+                      <a class="btn btn-outline-dark" href="https://arxiv.org/abs/2502.13151" target="_blank" role="button">Read on arXiv</a>
                   </div>
               </div>
           </div>
@@ -51,7 +51,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Hermitian Matrices as a Complex Vector Space</h5>
                     <p>July 2020</p>
-                    <a class="btn btn-outline-dark" href="https://www.researchgate.net/publication/343280846_Hermitian_Matrices_as_a_Complex_Vector_Space" target="_blank">Read on ResearchGate.</a>
+                    <a class="btn btn-outline-dark" href="https://www.researchgate.net/publication/343280846_Hermitian_Matrices_as_a_Complex_Vector_Space" target="_blank">Read on ResearchGate</a>
                 </div>
             </div>
         </div>
