--- a/publications.html
+++ b/publications.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="batuhan bayir, batuhan bayir math, batuhan bayir utah">
-    <title>Batuhan Bayir</title>
-    <title>Batuhan Bayir - Presentations & Talks</title>
+    <title>Batuhan Bayir - Publications</title>
 
     <!-- CSS Files -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
