--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Hermitian Matrices as a Complex Vector Space</h5>
                     <p>July 2020</p>
+                    <div class="text-center"><img src="hermite-as-vs.png" class="img-fluid" style="padding: 10px;" width="400" height="350" alt="Hermitian matrices as a vector space"></div>
                     <a class="btn btn-outline-dark" href="https://www.researchgate.net/publication/343280846_Hermitian_Matrices_as_a_Complex_Vector_Space" target="_blank">Read on ResearchGate</a>
                 </div>
             </div>
