--- a/index.html
+++ b/index.html
@@ -70,23 +70,28 @@
         </div>
 
         <div class="row align-items-md-stretch">
+          <!-- Publications Box -->
           <div class="col-md-6 mb-3">
-            <div class="h-100 p-5 text-bg-dark rounded-3">
+            <div class="h-100 p-5 text-bg-dark rounded-3" style="background-image: url('pdes-chalk.jpg'); background-size: cover; background-position: center;">
               <a href="publications.html" class="btn btn-outline-light fs-4">Publications</a>
               <p>You can check out my publications.</p>
             </div>
           </div>
+        
+          <!-- Talks Box -->
           <div class="col-md-6 mb-3">
-            <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-              <a href="talks.html" class="btn btn-outline-dark fs-4">Presentations & Talks</a>
+            <div class="h-100 p-5 text-bg-dark rounded-3" style="background-image: url('ulm.jpg'); background-size: cover; background-position: center;">
+              <a href="talks.html" class="btn btn-outline-light fs-4">Presentations & Talks</a>
               <p>You can watch some of my expository talks and look at my poster presentations.</p>
             </div>
           </div>
         </div>
+        
 
         <footer class="pt-3 mt-4 text-body-secondary border-top">
           &copy; 2025
         </footer>
+      </div>
       </div>
     </main>
   </body>
