--- a/index.html
+++ b/index.html
@@ -10,7 +10,32 @@
     <!-- CSS Files -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
+    <!-- Custom CSS for Background Images -->
+    <style>
+      .bg-image-box {
+        position: relative;
+        overflow: hidden;
+        height: 100%;
+      }
+
+      .bg-image-box img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensures the image covers the box */
+        z-index: 0;
+      }
+
+      .bg-image-box .content {
+        position: relative;
+        z-index: 1;
+        color: white; /* Ensure text is visible */
+      }
+    </style>
   </head>
   <body>
     <main>
@@ -72,26 +97,30 @@
         <div class="row align-items-md-stretch">
           <!-- Publications Box -->
           <div class="col-md-6 mb-3">
-            <div class="h-100 p-5 text-bg-dark rounded-3" style="background-image: url('pdes-chalk.jpg'); background-size: cover; background-position: center;">
-              <a href="publications.html" class="btn btn-outline-light fs-4">Publications</a>
-              <p>You can check out my publications.</p>
+            <div class="h-100 p-5 text-bg-dark rounded-3 bg-image-box">
+              <img src="pdes-chalk.jpg" alt="Publications Background">
+              <div class="content">
+                <a href="publications.html" class="btn btn-outline-light fs-4">Publications</a>
+                <p>You can check out my publications.</p>
+              </div>
             </div>
           </div>
-        
+
           <!-- Talks Box -->
           <div class="col-md-6 mb-3">
-            <div class="h-100 p-5 text-bg-dark rounded-3" style="background-image: url('ulm.jpg'); background-size: cover; background-position: center;">
-              <a href="talks.html" class="btn btn-outline-light fs-4">Presentations & Talks</a>
-              <p>You can watch some of my expository talks and look at my poster presentations.</p>
+            <div class="h-100 p-5 text-bg-dark rounded-3 bg-image-box">
+              <img src="ulm.jpg" alt="Talks Background">
+              <div class="content">
+                <a href="talks.html" class="btn btn-outline-light fs-4">Presentations & Talks</a>
+                <p>You can watch some of my expository talks and look at my poster presentations.</p>
+              </div>
             </div>
           </div>
         </div>
-        
 
         <footer class="pt-3 mt-4 text-body-secondary border-top">
           &copy; 2025
         </footer>
-      </div>
       </div>
     </main>
   </body>
