--- a/index.html
+++ b/index.html
@@ -97,19 +97,17 @@
         <div class="row align-items-md-stretch">
           <!-- Publications Box -->
           <div class="col-md-6 mb-3">
-            <div class="h-100 p-5 text-bg-dark rounded-3 bg-image-box">
-              <img src="pdes-chalk.jpg" alt="Publications Background">
+            <div class="h-100 p-5 text-bg-dark rounded-3 bg-image-box" style="background-image: url('pdes-chalk.jpg'); background-position: left center; background-size: cover;">
               <div class="content">
                 <a href="publications.html" class="btn btn-outline-light fs-4">Publications</a>
                 <p>You can check out my publications.</p>
               </div>
             </div>
           </div>
-
+        
           <!-- Talks Box -->
           <div class="col-md-6 mb-3">
-            <div class="h-100 p-5 text-bg-dark rounded-3 bg-image-box">
-              <img src="ulm.jpg" alt="Talks Background">
+            <div class="h-100 p-5 text-bg-dark rounded-3 bg-image-box" style="background-image: url('ulm.jpg'); background-position: center; background-size: cover;">
               <div class="content">
                 <a href="talks.html" class="btn btn-outline-light fs-4">Presentations & Talks</a>
                 <p>You can watch some of my expository talks and look at my poster presentations.</p>
