--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <a href="https://www.ozyegin.edu.tr/en" target="_blank">Ozyegin University</a> and my 
                   bachelor's degree in physics from 
                   <a href="https://www.ankara.edu.tr/" target="_blank">Ankara University</a>.
-                  I am interested in partial differential equations and currently I study nonlinear Fokker-Planck type systems arising from <a href="https://physics.aps.org/articles/v4/33" target="_blank">grain growth</a> modeling of the polycrystalline materials. For get more idea, please check out our <a href="https://arxiv.org/abs/2502.13151" target="_blank">recent work</a>.
+                  I am interested in partial differential equations and currently I study nonlinear Fokker-Planck type systems arising from <a href="https://physics.aps.org/articles/v4/33" target="_blank">grain growth</a> modeling of the polycrystalline materials. For more ideas, please check out our <a href="https://arxiv.org/abs/2502.13151" target="_blank">recent work</a>.
                 </p>
                 <p class="fs-4">
                   My advisors are 
