--- a/talks.html
+++ b/talks.html
@@ -40,6 +40,7 @@
                   <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/pokN1o-99A0?si=QXg70PUhqq6TgNI3&amp;controls=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
+                  <a class="btn btn-outline-dark mt-3" href="tautochrone.pdf" target="_blank" role="button">Look at the slides</a>
                 </div>
               </div>
             </div>
@@ -51,6 +52,7 @@
                   <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/6QTyBzGqVHM?si=fTtlxbVkF4T5WjvM&amp;controls=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
+                  <a class="btn btn-outline-dark mt-3" href="minkowski.pdf" target="_blank" role="button">Look at the slides</a>
                 </div>
               </div>
             </div>
