path change for presentations

--- a/talks.html
+++ b/talks.html
@@ -30,6 +30,20 @@
         </header>
 
         <div class="container mt-5">
+          <h1>Talks</h1>
+          <div class="card mb-4">
+            <div class="card-body py-3 px-3">
+              <div class="fs-5 mb-2 d-flex align-items-baseline">
+                <span>Global Well-Posedness of a Nonlinear Fokker-Planck Type Model of Grain Growth</span>
+                <a href="presentations/nfp_slides.pdf" class="btn btn-outline-dark btn-sm ms-2">Look at the slides</a>
+              </div>
+              <ul class="fs-6 mb-0">
+                <li><a href="https://www.usu.edu/math/clubs/siam/conference" target="_blank">2025 SIAM Wasatch Student Chapters Conference</a>, 12 April 2025, Utah State University</li>
+                <li>Applied Math Collective, 7 April 2025, University of Utah</li>
+              </ul>
+            </div>
+          </div>
+
           <h1>Expository Talks</h1>
           <div class="row">
             <div class="col-md-6">
@@ -40,7 +54,7 @@
                   <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/pokN1o-99A0?si=QXg70PUhqq6TgNI3&amp;controls=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
-                  <a class="btn btn-outline-dark mt-3" href="tautochrone.pdf" target="_blank" role="button">Look at the slides</a>
+                  <a class="btn btn-outline-dark mt-3" href="presentations/tautochrone.pdf" target="_blank" role="button">Look at the slides</a>
                 </div>
               </div>
             </div>
@@ -52,7 +66,7 @@
                   <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/6QTyBzGqVHM?si=fTtlxbVkF4T5WjvM&amp;controls=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
-                  <a class="btn btn-outline-dark mt-3" href="minkowski.pdf" target="_blank" role="button">Look at the slides</a>
+                  <a class="btn btn-outline-dark mt-3" href="presentations/minkowski.pdf" target="_blank" role="button">Look at the slides</a>
                 </div>
               </div>
             </div>
@@ -66,7 +80,7 @@
                   <h5 class="card-title">A Fourier Spectral Method for the Rosenau Equation</h5>
                   <p class="card-text">Presented at <a href="https://www.uni-ulm.de/mawi/iaa/forschung/horizons-in-non-linear-pdes-summer-school-2022/" target="_blank">Horizons in non-linear PDEs Summer School</a>, 26-30 September 2022, Ulm University, Germany.</p>
                   <img src="rosenau-poster.svg" class="img-fluid" alt="Rosenau">
-                  <a class="btn btn-outline-dark mt-3" href="rosenau_poster.pdf" target="_blank" role="button">Look at the poster</a>
+                  <a class="btn btn-outline-dark mt-3" href="presentations/rosenau_poster.pdf" target="_blank" role="button">Look at the poster</a>
                 </div>
               </div>
             </div>
