isbn info for book added

--- a/publications.html
+++ b/publications.html
@@ -67,8 +67,9 @@
                       <p class="card-text">January 2015</p>
                       <p class="card-text">
                         <a href="https://www.wikiwand.com/en/Bootstrap_(front-end_framework" target="_blank">Bootstrap</a> 3 is modern <a href="https://www.wikiwand.com/en/CSS" target="_blank">CSS</a> framework for developing mobile device friendly websites. I wrote Türkiye’s first Bootstrap 3 book when I was a 15 years old. Published by <a href="https://www.kodlab.com/content/4-hakkimizda" target="_blank">KODLAB</a> in 2015. Book comes with supplementary DVD and contains instructive <a href="https://www.youtube.com/watch?v=hTWr6pCQnhk" target="_blank">videos</a>.
-                        The book is in Turkish.
+                        First Edition: Jan. 2015, Second Edition: Nov. 2015. 
                       </p>
+                      <p>ISBN (Softcover): 9786059118026.</p>
                       <div class="text-center"><img src="bootstrap-book.jpg" class="img-fluid" style="padding: 10px;" width="400" height="350" alt="Bootstrap book"></div>
                       <a class="btn btn-outline-dark" href="https://books.google.com/books?id=0p1TDwAAQBAJ&printsec=frontcover&hl=en" target="_blank" role="button">Look at the sample pages on Google Books</a>
                   </div>
