--- a/talks.html
+++ b/talks.html
@@ -35,7 +35,7 @@
             <div class="card-body py-3 px-3">
               <div class="fs-5 mb-2 d-flex align-items-baseline">
                 <span>Global Well-Posedness of a Nonlinear Fokker-Planck Type Model of Grain Growth</span>
-                <a href="presentations/nfp_slides.pdf" class="btn btn-outline-dark btn-sm ms-2" target="_blank">Look at the slides</a>
+                <a href="presentations/nfp_slides.pdf" rel="nofollow" class="btn btn-outline-dark btn-sm ms-2" target="_blank">Look at the slides</a>
               </div>
               <ul class="fs-6 mb-0">
                 <li><a href="https://www.usu.edu/math/clubs/siam/conference" target="_blank">2025 SIAM Wasatch Student Chapters Conference</a>, 12 April 2025, Utah State University</li>
