--- a/talks.html
+++ b/talks.html
@@ -50,7 +50,7 @@
               <div class="card mb-4">
                 <div class="card-body">
                   <h5 class="card-title">Tautochrone (Eş Zaman) Eğrisi ve İntegral Denklemler</h5>
-                  <p class="card-text">Given at 9th <a href="https://www.baharmatematikbulusmasi.com/9-bahar-matematik-bulusmasi/" target="_blank">Bahar Mathematics Meeting</a>.</p>
+                  <p class="card-text">Given at <a href="https://www.baharmatematikbulusmasi.com/9-bahar-matematik-bulusmasi/" target="_blank">9th Bahar Mathematics Meeting</a>.</p>
                   <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/pokN1o-99A0?si=QXg70PUhqq6TgNI3&amp;controls=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
@@ -62,7 +62,7 @@
               <div class="card mb-4">
                 <div class="card-body">
                   <h5 class="card-title">Minkowski Uzayzamanı</h5>
-                  <p class="card-text">Given at Ankara University MathComp Society and 6th <a href="https://www.baharmatematikbulusmasi.com/6-bahar-matematik-bulusmasi/" target="_blank">Bahar Mathematics Meeting</a>.</p>
+                  <p class="card-text">Given at Ankara University MathComp Society and <a href="https://www.baharmatematikbulusmasi.com/6-bahar-matematik-bulusmasi/" target="_blank">6th Bahar Mathematics Meeting</a>.</p>
                   <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/6QTyBzGqVHM?si=fTtlxbVkF4T5WjvM&amp;controls=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
