--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Bootstrap 3: Yeni Başlayanlar İçin (Bootstrap 3 for Beginners)</h5>
                       <p class="card-text">First Edition: January 2015, Second Edition: November 2015</p>
-                      <p class="card-text">ISBN (Softcover): 9786059118026</p>
+                      <p class="card-text"><a href="https://www.wikiwand.com/en/articles/ISBN" target="_blank">ISBN</a> (Softcover): 9786059118026</p>
                       <p class="card-text">
                         <a href="https://www.wikiwand.com/en/Bootstrap_(front-end_framework" target="_blank">Bootstrap</a> 3 is modern <a href="https://www.wikiwand.com/en/CSS" target="_blank">CSS</a> framework for developing mobile device friendly websites. I wrote Türkiye’s first Bootstrap 3 book when I was a 15 years old. Published by <a href="https://www.kodlab.com/content/4-hakkimizda" target="_blank">KODLAB</a> in 2015. The book comes with a supplementary DVD and contains instructive <a href="https://www.youtube.com/watch?v=hTWr6pCQnhk" target="_blank">videos</a> and code examples.
                       </p>
