--- a/talks.html
+++ b/talks.html
@@ -44,6 +44,58 @@
             </div>
           </div>
 
+
+          <h1>Poster Presentations</h1>
+          <div class="row">
+          <!-- First Card -->
+          <div class="col-md-6 mb-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <div> <!-- Content wrapper -->
+                  <h5 class="card-title">Global Well-Posedness of a Nonlinear Fokker-Planck Type Model of Grain Growth</h5>
+                  Presented at:
+                  <ul class="mb-3">
+                    <li><a href="https://events.mcs.cmu.edu/frontiers2025/" target="_blank">Frontiers in Applied Analysis</a>, 3-6 June 2025, Carnegie Mellon University</li>
+                    <li><a href="https://math.asu.edu/rmmcss2025" target="_blank">RMMC Summer School</a>, 17-20 June 2025, University of Wyoming</li>
+                  </ul>
+                </div>
+
+                <!-- Image container -->
+                <div class="mt-auto text-center py-2">
+                  <img src="simulation.jpg" class="img-fluid" style="max-width: 65%; height: auto;" alt="NFP Simulation">
+                </div>
+
+                <!-- Button with perfect alignment -->
+                <div class="mt-3 d-flex">
+                  <a class="btn btn-outline-dark" href="presentations/nfp_poster.pdf" target="_blank" role="button">Look at the poster</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Second Card -->
+          <div class="col-md-6 mb-4">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column">
+                <div> <!-- Content wrapper -->
+                  <h5 class="card-title">A Fourier Spectral Method for the Rosenau Equation</h5>
+                  <p class="mb-3">Presented at <a href="https://www.uni-ulm.de/mawi/iaa/forschung/horizons-in-non-linear-pdes-summer-school-2022/" target="_blank">Horizons in non-linear PDEs Summer School</a>, 26-30 September 2022, Ulm University, Germany</p>
+                </div>
+
+                <!-- Image container -->
+                <div class="mt-auto text-center py-2">
+                  <img src="rosenau-poster.svg" class="img-fluid" style="max-width: 100%; height: auto;" alt="Rosenau">
+                </div>
+
+                <!-- Button with perfect alignment -->
+                <div class="mt-3 d-flex">
+                  <a class="btn btn-outline-dark" href="presentations/rosenau_poster.pdf" target="_blank" role="button">Look at the poster</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
           <h1>Expository Talks</h1>
           <div class="row">
             <div class="col-md-6">
@@ -67,20 +119,6 @@
                     <iframe src="https://www.youtube.com/embed/6QTyBzGqVHM?si=fTtlxbVkF4T5WjvM&amp;controls=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
                   <a class="btn btn-outline-dark mt-3" href="presentations/minkowski.pdf" target="_blank" role="button">Look at the slides</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <h1>Poster Presentations</h1>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="card mb-4">
-                <div class="card-body">
-                  <h5 class="card-title">A Fourier Spectral Method for the Rosenau Equation</h5>
-                  <p class="card-text">Presented at <a href="https://www.uni-ulm.de/mawi/iaa/forschung/horizons-in-non-linear-pdes-summer-school-2022/" target="_blank">Horizons in non-linear PDEs Summer School</a>, 26-30 September 2022, Ulm University, Germany.</p>
-                  <img src="rosenau-poster.svg" class="img-fluid" alt="Rosenau">
-                  <a class="btn btn-outline-dark mt-3" href="presentations/rosenau_poster.pdf" target="_blank" role="button">Look at the poster</a>
                 </div>
               </div>
             </div>
