third year and publication update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class="col-md-8 order-md-1 order-2">
                 <h1 class="display-5 fw-bold">Batuhan Bayir</h1>
                 <p class="fs-4">
-                  I am a second-year graduate student in the 
+                  I am a third-year graduate student in the 
                   <a href="https://www.math.utah.edu/" target="_blank">Department of Mathematics</a> at the 
                   <a href="https://www.utah.edu/" target="_blank">University of Utah</a>. Before coming to Utah, 
                   I obtained my master's degree in mathematics from 
