--- a/publications.html
+++ b/publications.html
@@ -32,17 +32,18 @@
     </header>
 
     <div class="container mt-5">
-      <h1>Preprints</h1>
+      <h1>Publications</h1>
       <div class="row">
           <div class="col-md-6">
               <div class="card mb-4">
                   <div class="card-body">
                       <h5 class="card-title">Global Well-Posedness of a Nonlinear Fokker-Planck Type Model of Grain Growth</h5>
                       <p>February 2025</p>
-                      <p>Accepted for publication in Discrete and Continuous Dynamical Systems (DCDS)</p>
+                      <p>Discrete and Continuous Dynamical Systems (DCDS)</p>
                       <p class="card-text"> Authors: Batuhan Bayir, <a href="https://www.math.utah.edu/~epshteyn/" target="_blank">Yekaterina Epshteyn</a>, and <a href="https://www.math.utah.edu/~feldman/" target="_blank">William M Feldman</a></p>
                       <div class="text-center"><img src="grain-boundary.png" class="img-fluid" style="padding: 10px;" width="400" height="350" alt="Grain boundary"></div>
                       <a class="btn btn-outline-dark" href="https://arxiv.org/abs/2502.13151" target="_blank" role="button">Read on arXiv</a>
+                      <a class="btn btn-outline-dark" href="https://dx.doi.org/10.3934/dcds.2025146" target="_blank" role="button">Read in the journal</a>
                   </div>
               </div>
           </div>
