--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <!-- Contact details -->
                 <h3 class="fw-bold">Contact</h3>
                 <p class="fs-4"><i class="bi bi-envelope"></i> bayir at math dot utah dot edu</p>
-                <p class="fs-4"><strong><i class="bi bi-buildings bi-2x"></i></strong> JWB 121-J (<a href="https://map.utah.edu/?buildingnumber=9" target="_blank">map</a>)</p>
+                <p class="fs-4"><strong><i class="bi bi-buildings bi-2x"></i></strong> JWB 105 (<a href="https://map.utah.edu/?buildingnumber=9" target="_blank">map</a>)</p>
                 <a href="https://arxiv.org/a/bayir_b_1.html" target="_blank"><i class="ai ai-arxiv ai-3x" style="color: #b31b1b;"></i></a>
                 <a href="https://scholar.google.com/scholar_lookup?arxiv_id=2502.13151" target="_blank"><i class="ai ai-google-scholar ai-3x" style="color: #4086f4;"></i></a>
                 <a href="https://orcid.org/0009-0003-5294-189X" target="_blank"><i class="ai ai-orcid ai-3x" style="color: #a5cd39;"></i></a>
